20-12-05    Added missing path vars in config template (Tomasz Osmialowski)
20-12-05    Fixed corruption of german language file in default module
19-12-05    Fixed incorrect constant which prevented instant messages from working
            correctly
16-12-05    Changed erroneous ECT tz to CET (Sylvain PAPET)

IMPROVEMENTS
22-12-05    PEAR's Translation2 lib integrated which means application interface,
            navigation and content can now be translated into multiple languages,
            many thanks to AJ's gargantuan effort here and the patronage of
            Multithink.com (AJ Tarachanowicz)
22-12-05    Improvement to the who's online block (Andrey Podshivalov)


+-----------------------+
| VERSION: 0.5.4        |
+-----------------------+
BUGFIXES
24-11-05    Fixed long-standing image preview header probs
24-11-05    Fixed config prob with FCK, images now upload correctly

IMPROVEMENTS
14-12-05    Module skeleton generator improved, it now: creates template files,
            lang files and aActionsMapping array (Werner Krauss)
14-12-05    Added SGL::loadRegionList for loading localised country/state arrays
            (Philippe Lhoste)
14-12-05    'localeCategory' configurable, set to LC_ALL by default although European
            users will want to change this where supplying a , for the decimal separator
            causes calculation probs (use LC_TIME)
14-12-05    Integrated advanced locale features available via SGL_Locale, disabled
            by default
14-12-05    SGL_USR_OS renamed more correctly to SGL_CLIENT_OS
12-12-05    Block management enhanced - you can now create any number of arbitrarily
            positioned blocks and assign content to them (Andrey Podshivalov)
12-12-05    Uri aliases integrated into navigation module, external Uris handled
            (Andrey Podshivalov)
06-12-05	Basic CLI request implemented (Eric Persson)
01-12-05    Three url parsers loaded by default: classic querystring, standard